syntax = "proto2";

package query;

message Node {
    enum NodeType {
        UNKNOWN_NODE = 0;
        CONSTANT = 1;
        VARIABLE = 2;
        OPERATOR = 3;
    }
    required NodeType type = 1;

    optional double cst = 2;
    optional Variable var = 3;
    optional Operator op = 4;
}

message Variable {
    optional string label = 1;
    optional string dtype = 2;
    repeated uint32 shape = 3;
}

message Operator {
    required string opname = 1;
    map<string,Attribute> attrs = 2;
    repeated Node args = 3;
}

message Attribute {
    enum AttrType {
        UNKNOWN_ATTR = 0;
        INT = 1;
        DOUBLE = 2;
        INT_ARR = 3;
        DOUBLE_ARR = 4;
        STRING = 5;
        NODE = 6;
        LAYER = 7;
    }
    required AttrType type = 1;

    optional int64 inum = 2;
    optional double dnum = 3;
    repeated int64 inums = 4;
    repeated double dnums = 5;
    optional string str = 6;
    optional Node node = 7;
    optional Layer layer = 8;
}

message Layer {
    optional string name = 1;
    optional Node input = 2;
}
